<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/yandex_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/taxi_icon"
        tools:visibility="visible">

...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="@+id/background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/driver_license_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toBottomOf="@+id/driver_license_input_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passport_first_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toBottomOf="@+id/passport_first_input_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passport_reg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toBottomOf="@+id/passport_reg_input_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sts_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toBottomOf="@+id/sts_input_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/license_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toBottomOf="@+id/license_input_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
...
