...
        android:id="@+id/city_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/taxi_icon">

        <ImageView
            android:id="@+id/city_background"
            android:layout_width="match_parent"
            android:layout_height="1260dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:src="@drawable/bg_profile_gradient"
...
            android:textSize="@dimen/text_13sp"
            app:layout_constraintEnd_toEndOf="@+id/city_background"
            app:layout_constraintStart_toStartOf="@+id/city_background"
            app:layout_constraintTop_toTopOf="@+id/city_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_driver_license_front_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_profile"
                android:drawableEnd="@drawable/ic_download"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_16dp"
...
                android:textSize="@dimen/text_16sp"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/city_driver_license_front_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_62dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/margin_8dp"
...
