...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/take_photo_btn" />

    <TextView
        android:id="@+id/folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16dp"
...
        android:src="@drawable/ic_photo_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16dp"
        android:text="@string/done"
        android:textColor="@color/yellow_color"
        android:textSize="@dimen/text_16sp"
...
