<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/start">
        <Constraint android:id="@+id/back_arrow" />
        <Constraint
            android:id="@+id/download_documents_button"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_tv" />
        <Constraint
            android:id="@+id/set_phone_number_button"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_variants_tv" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint android:id="@id/back_arrow" />
    </ConstraintSet>

    <Transition
        app:autoTransition="animateToEnd"
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@+id/start"
        app:duration="500"
        app:layoutDuringTransition="honorRequest" />

</MotionScene>
