...
                    android:textSize="@dimen/text_13sp"
                    app:layout_constraintEnd_toEndOf="@+id/new_account_background"
                    app:layout_constraintStart_toStartOf="@+id/new_account_background"
                    app:layout_constraintTop_toBottomOf="@+id/new_add_account_tv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surname_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_profile"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
...
                    android:textSize="@dimen/text_13sp"
                    app:layout_constraintEnd_toEndOf="@+id/new_account_background"
                    app:layout_constraintStart_toStartOf="@+id/new_account_background"
                    app:layout_constraintTop_toBottomOf="@+id/surname_input_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_profile"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
...
                    android:textSize="@dimen/text_13sp"
                    app:layout_constraintEnd_toEndOf="@+id/new_account_background"
                    app:layout_constraintStart_toStartOf="@+id/new_account_background"
                    app:layout_constraintTop_toBottomOf="@+id/middle_name_input_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_profile"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="20"
...
                    android:textSize="@dimen/text_13sp"
                    app:layout_constraintEnd_toEndOf="@+id/new_account_background"
                    app:layout_constraintStart_toStartOf="@+id/new_account_background"
                    app:layout_constraintTop_toBottomOf="@+id/account_input_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bik_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_profile"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="20"
...
                        android:textColorHint="@color/gray_profile"
                        android:textSize="@dimen/text_16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/add_account_button"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_margin="@dimen/margin_24dp"
                    android:background="@drawable/bg_intro_btn"
                    android:text="@string/add_button_text"
                    android:textAllCaps="false"
...
