...
                    android:background="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/withdrawal_applications_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/accounts_and_cards_view"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif-medium"
...
